--- a/style.css
+++ b/style.css
@@ -14,18 +14,23 @@ body{
     align-items: center;
     background-color: rgb(214, 210, 210);
     width: 230px;
-    height: 350px;
+    height: 400px;
     border-radius: 20px;
 }
     .outbox img{
         width: 200px;
         position: relative;
-        bottom: 60px;
+        bottom: 20px;
         border-radius: 20px;
 }
 .text{
     text-align: center;
-    display: inline;    
+    display: inline;
+    padding: 50px 50px; 
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;   
+}
+figcaption{
+    padding: 50px 50px;
 }
 .text h2{
     font-size: 15px;
