--- a/style.css
+++ b/style.css
@@ -1,38 +1,38 @@
-*{
+* {
     margin: 0%;
     padding: 0%;
 }
-body{
+
+.outbox {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(214, 210, 210);
+    width: min-content;
+    height: fit-content;
+    padding: 1em;
+    border-radius: 20px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
-.outbox{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(214, 210, 210);
-    width: 230px;
-    height: 400px;
+
+.outbox img {
+    width: 200px;
     border-radius: 20px;
+    margin-bottom: auto;
 }
-    .outbox img{
-        width: 200px;
-        position: relative;
-        bottom: 20px;
-        border-radius: 20px;
-}
-.text{
+
+.text {
     text-align: center;
     display: inline;
-    padding: 50px 50px; 
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;   
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
 }
-figcaption{
-    padding: 50px 50px;
-}
-.text h2{
+
+.text h2 {
     font-size: 15px;
     position: relative;
 }
